# datavillage-sdk-python

./: .gitignore  README.md  Readme.md  pyproject.toml
datavillage_sdk/: auth.py  behaviour.py  cages.py  consent.py  user.py
datavillage_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
htmlcov/: _venv_lib_python3_7_site-packages__pytest__argcomplete_py.html  _venv_lib_python3_7_site-packages__pytest__code_code_py.html  _venv_lib_python3_7_site-packages__pytest__code_source_py.html  _venv_lib_python3_7_site-packages__pytest_assertion___init___py.html  _venv_lib_python3_7_site-packages__pytest_assertion_rewrite_py.html  _venv_lib_python3_7_site-packages__pytest_cacheprovider_py.html  _venv_lib_python3_7_site-packages__pytest_capture_py.html  _venv_lib_python3_7_site-packages__pytest_compat_py.html  _venv_lib_python3_7_site-packages__pytest_config___init___py.html  _venv_lib_python3_7_site-packages__pytest_config_argparsing_py.html  _venv_lib_python3_7_site-packages__pytest_debugging_py.html  _venv_lib_python3_7_site-packages__pytest_doctest_py.html  _venv_lib_python3_7_site-packages__pytest_faulthandler_py.html  _venv_lib_python3_7_site-packages__pytest_fixtures_py.html  _venv_lib_python3_7_site-packages__pytest_helpconfig_py.html  _venv_lib_python3_7_site-packages__pytest_junitxml_py.html  _venv_lib_python3_7_site-packages__pytest_logging_py.html  _venv_lib_python3_7_site-packages__pytest_main_py.html  _venv_lib_python3_7_site-packages__pytest_mark___init___py.html  _venv_lib_python3_7_site-packages__pytest_mark_evaluate_py.html  (+169 more)
tests/: test_datavillage_sdk.py  (+9 more)
(+6 files in other folders)
