[tool.poetry]
name = "datavillage-sdk"
version = "0.1.0"
description = ""
authors = ["developer@datavillage.me"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.3"
black = "^19.10b0"
recommonmark = "^0.6.0"
mkdocs = "^1.1.2"
nose = "^1.3.7"
allanc-sphinx = "^0.2"
sphinx-rtd-theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
